Name:                rpn
Version:             1.0
Synopsis:            Converts expressions in infix into postfix form.
Description:         Unix utility for conversion of infix-form expressions into reverse polish notation (postfix format)
Homepage:            https://github.com/mbixby/RPN.hs
License:             GPL-3
License-file:        LICENSE
Author:              mbix
Maintainer:          contact@raspberryapps.com
Category:            Math
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >= 1.6

Executable rpn
  Main-is: rpn.hs   
  Extensions: RankNTypes
  Build-depends: base >= 2 && <= 4.5, parsec, transformers

Source-repository head
  Type:     git
  Location: https://github.com/mbixby/RPN.hs